# global_localization

./: CMakeLists.txt  README.md  package.xml
config/: efficient_loftr.yaml  eloftr_file_queue.yaml  geo_prior_constraint_matching.yaml  global_localizer.yaml  hybrid_localization_common.yaml  hybrid_localization_evaluator.yaml  hybrid_localization_hesai.yaml  hybrid_localization_mid360.yaml  livox_custom_to_pointcloud2.yaml  local_geometric_semantic_mapper.yaml  rangenet_geometry_adapter.yaml  rangenetpp_inference_bridge.yaml  rangenetpp_ros_node.yaml  sam3_hesai.yaml  sam3_mid360.yaml  sam3_projected_semantic_mapper.yaml  sam3_semantic_matching.yaml  satellite_downloader.yaml  segformer_mask_projector.yaml  semantic_gtsam_pose_graph.yaml  semantic_keyframe_pose_graph.yaml  semantic_slam.yaml  trajectory_groundtruth_evaluator.yaml  trajectory_ned_recorder.yaml
include/hybrid_localization/: core.h  i2nav_ranger_odometer.h  lidar_odometry.h  semantic_pose_graph.h  sparse_visual_map.h  visual_loop_detector.h  visual_rotation_tracker.h
launch/: global_localization.launch  hybrid_localization_evaluation.launch  hybrid_localization_hesai.launch  hybrid_localization_mid360.launch  local_geometric_semantic_mapper.launch  rangenetpp_semantic_slam.launch  sam3_projected_semantic_mapping.launch  semantic_slam.launch  trajectory_groundtruth_evaluation.launch  trajectory_ned_recorder.launch
rviz/: hybrid_localization.rviz
scripts/: camera_lidar_queue_exporter.py  cloud_topic_probe.py  efficient_loftr_bridge.py  eloftr_file_service.py  eloftr_queue_exporter.py  eloftr_queue_result_publisher.py  geo_prior_constraint_match_service.py  local_geometric_semantic_mapper.py  map_match_evaluator.py  projected_semantic_bev_mapper.py  rangenetpp_backend_template.py  rangenetpp_inference_bridge.py  sam3_image_mask_service.py  sam3_semantic_match_service.py  satellite_tile_downloader.py  semantic_file_service.py  trajectory_ned_recorder.py
src/: cloud_topic_probe_node.cpp  global_localizer_node.cpp  hybrid_localization_core.cpp  hybrid_localization_core_smoke_test.cpp  hybrid_localization_evaluator_node.cpp  hybrid_localization_node.cpp  lidar_odometry.cpp  livox_custom_to_pointcloud2_node.cpp  rangenet_geometry_adapter_node.cpp  rangenetpp_ros_node.cpp  segformer_mask_projector_node.cpp  semantic_gtsam_pose_graph_node.cpp  semantic_keyframe_pose_graph_node.cpp  semantic_pose_graph.cpp  semantic_pose_graph_smoke_test.cpp  semantic_voxel_mapper_node.cpp  sparse_visual_map.cpp  sparse_visual_map_smoke_test.cpp  trajectory_groundtruth_evaluator_node.cpp  visual_loop_detector.cpp  visual_loop_detector_smoke_test.cpp  visual_rotation_tracker.cpp  visual_rotation_tracker_smoke_test.cpp
tools/: evaluate_street00_ablation.sh  evo_local_ned_eval.py  format_ablation_summary.py  run_street00_ablation.sh  run_street02_evo_eval.sh  simulate_chamfer_matching.py  simulate_semantic_matching.py  use_phd_exp_evo.sh
