<?xml version="1.0"?>
<package format="2">
  <name>fast_livo2_global_localization</name>
  <version>0.2.0</version>
  <description>Wide-area hybrid localization extension for FAST-LIVO2 with high-resolution satellite tiles, ground-removed BEV generation, map alignment and EKF fusion.</description>
  <maintainer email="user@example.com">researcher</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <export/>
</package>
